--- a/index.html
+++ b/index.html
@@ -3,14 +3,36 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon.ico.png" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#1f2937" />
   <meta name="description" content="中小企業向け資金繰り管理アプリ - スマホで爆速入力、キャッシュフロー即時可視化" />
+
+  <!-- iOS PWA Configuration -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="BizFlow" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+  <!-- iOS Splash Screens (主要デバイス) -->
+  <!-- iPhone 14 Pro Max, 15 Plus, 16 Pro Max -->
+  <link rel="apple-touch-startup-image" href="/splash-1290x2796.png"
+    media="(device-width: 430px) and (device-height: 932px) and (-webkit-device-pixel-ratio: 3)" />
+  <!-- iPhone 12 Pro Max, 13 Pro Max, 14 Plus -->
+  <link rel="apple-touch-startup-image" href="/splash-1284x2778.png"
+    media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3)" />
+  <!-- iPhone 12/13/14/15, 16 -->
+  <link rel="apple-touch-startup-image" href="/splash-1170x2532.png"
+    media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3)" />
+  <!-- iPhone 12/13 mini -->
+  <link rel="apple-touch-startup-image" href="/splash-1125x2436.png"
+    media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" />
+  <!-- iPhone SE 3rd gen, 8, 7, 6s -->
+  <link rel="apple-touch-startup-image" href="/splash-750x1334.png"
+    media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" />
+
+  <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
