feat: PWA Native Quality + Calendar double-tap popup

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     content="width=device-width, initial-scale=1.0, viewport-fit=cover, maximum-scale=1.0, user-scalable=no" />
   <meta name="theme-color" content="#1f2937" />
   <meta name="description" content="中小企業向け資金繰り管理アプリ - スマホで爆速入力、キャッシュフロー即時可視化" />
+  <meta name="robots" content="noindex, nofollow" />
 
   <!-- iOS PWA Configuration -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
