feat(projects): Add option to delete related transactions when deleting a project
- Add delete confirmation with options in ProjectPopover
- Update useProjectOperations to handle related transaction deletion
- Fix accessibility warnings in ProjectCreateWizard and ClientSelectField
- Fix deprecated meta tag in index.html
- Enhance debug logging for transactions

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta name="robots" content="noindex, nofollow" />
 
   <!-- iOS PWA Configuration -->
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="BizFlow" />
