Update application for deployment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
-  <meta name="apple-mobile-web-app-title" content="BizFlow" />
+  <meta name="apple-mobile-web-app-title" content="GANTACT" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
   <!-- iOS Splash Screens (主要デバイス) -->
@@ -40,7 +40,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans+JP:wght@400;500;600;700&display=swap"
     rel="stylesheet" />
-  <title>BizFlow Mobile - 資金繰り管理</title>
+  <title>GANTACT - 資金繰り管理</title>
 </head>
 
 <body>
