fix(pwa): change html caching to NetworkFirst and force reload on update

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 
 <body>
   <div id="root"></div>
+  <script>
+    console.log('Main Page Loaded: v1.1.0-fix ' + new Date().toISOString());
+  </script>
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
